--- a/back_app/package.json
+++ b/back_app/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "mysql": "github:mysqljs/mysql",
     "nodemon": "^2.0.2"
   }
