--- a/front_app/package.json
+++ b/front_app/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.12.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.1.3",
